Ajax post working, displays new users at top of list in descending order

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="main.js" type="text/javascript"></script>
+  <title>AJAX Post</title>
+
 
 </head>
 <body>
@@ -12,6 +11,19 @@
 <h3>Look in main.js for the AJAX request.</h3>
 <h3>Open your Chrome console to see the results of the demo.</h3>
 
+<form id='new-user' action='http://localhost:3000/users'>
+  <input type='text' name='name' id='name' placeholder="Name">
+  <input type='text' name='about' id='about' placeholder="About">
+  <input type='text' name='email' id='email' placeholder="Email">
 
+  <input type='submit' value='Create New User' id='submit'>
+</form>
+
+<hr>
+
+<div id="all_users"></div>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
